--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -32,13 +32,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: jwgmeligmeyling/spotbugs-github-action@v1.2
     - name: Set up JDK 17
       uses: actions/setup-java@v1
       with:
         java-version: 17
     - name: Run spotbugs
-      run: mvn -B site 
+      run: mvn site 
            mvn spotbugs:spotbugs
     - name: Upload report
       uses: actions/upload-artifact@v2
