--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -10,6 +10,7 @@ on:
     branches: [ main ]
 
 jobs:
+  
    
   checkstyle:
     runs-on: ubuntu-latest
@@ -44,4 +45,22 @@ jobs:
       with:
         name: spotbugs-report
         path: target/spotbugsXml.xml
+        
+    pmd:
+      runs-on: ubuntu-latest
+
+      steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+      - name: Run pmd
+        run: mvn -B pmd:pmd
+      - name: Upload report
+        uses: actions/upload-artifact@v2
+        with:
+          name: pmd-report
+          path: target/pmd.xml    
+        
     
