--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   
-   
+ 
   checkstyle:
     runs-on: ubuntu-latest
 
@@ -29,6 +29,7 @@ jobs:
         name: checkstyle-report
         path: target/checkstyle-result.xml
      
+
   spotbugs:
     runs-on: ubuntu-latest
 
@@ -46,21 +47,21 @@ jobs:
         name: spotbugs-report
         path: target/spotbugsXml.xml
         
-    pmd:
-      runs-on: ubuntu-latest
+#     ciao:
+#       runs-on: ubuntu-latest
 
-      steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-      - name: Run pmd
-        run: mvn -B pmd:pmd
-      - name: Upload report
-        uses: actions/upload-artifact@v2
-        with:
-          name: pmd-report
-          path: target/pmd.xml    
+#       steps:
+#       - uses: actions/checkout@v2
+#       - name: Set up JDK 17
+#         uses: actions/setup-java@v1
+#         with:
+#           java-version: 17
+#       - name: Run pmd
+#         run: mvn -B pmd:pmd
+#       - name: Upload report
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: pmd-report
+#           path: target/pmd.xml    
         
     
