--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -30,6 +30,25 @@ jobs:
         path: target/checkstyle-result.xml
      
 
+
+  pmd:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+    - name: Run pdm
+      run: mvn -B pdm:pdm
+    - name: Upload report
+      uses: actions/upload-artifact@v2
+      with:
+        name: pdm-report
+        path: target/pdm.xml
+        
+
   spotbugs:
     runs-on: ubuntu-latest
 
@@ -46,22 +65,5 @@ jobs:
       with:
         name: spotbugs-report
         path: target/spotbugsXml.xml
-        
-#     ciao:
-#       runs-on: ubuntu-latest
 
-#       steps:
-#       - uses: actions/checkout@v2
-#       - name: Set up JDK 17
-#         uses: actions/setup-java@v1
-#         with:
-#           java-version: 17
-#       - name: Run pmd
-#         run: mvn -B pmd:pmd
-#       - name: Upload report
-#         uses: actions/upload-artifact@v2
-#         with:
-#           name: pmd-report
-#           path: target/pmd.xml    
-        
     
